Refactor InventoryUpdateEvent to use Long for stock and update related tests; add Dockerfile for multi-stage build